<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">COST OF SERVICE</string>
    <string name="how_was_your_service">How was your service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Total Amount: %S</string>
</resources>